# LearnLLVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AST.h  Base.h  CalcRuntime.h  Condition.h  ForLoop.h  Function.h  Lexer.h  Parser.h
src/: Base.cpp  Condition.cpp  ForLoop.cpp  Function.cpp  IRGenerator.cpp  Lexer.cpp  Parser.cpp
test/: CalcRuntime.cpp  calc.ll  lib.ll  out.ll
